fix: set default time in brownie config

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -3,11 +3,12 @@ reports:
     - contracts/testing/*.*
 
 networks:
-    development:
-      cmd_settings:
-        accounts: 100
-    mainnet-fork:
-      cmd_settings:
-        unlock: 0xC447FcAF1dEf19A583F97b3620627BF69c05b5fB
+  development:
+    cmd_settings:
+      accounts: 100
+      time: 2021-05-12T21:52:33.856164
+  mainnet-fork:
+    cmd_settings:
+      unlock: 0xC447FcAF1dEf19A583F97b3620627BF69c05b5fB
 
 autofetch_sources: True
